--- a/LeftoverSwap/LSMeViewController.xib
+++ b/LeftoverSwap/LSMeViewController.xib
@@ -43,6 +43,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{6, 65}, {309, 201}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="133057837">
@@ -65,7 +66,8 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{6, 5}, {309, 32}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSNextKeyView" ref="349901641"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="167596200"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="133057837"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -98,6 +100,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{6, 45}, {309, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="780549580"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="133057837"/>
@@ -122,11 +125,12 @@
 						</object>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
-					<object class="IBUIButton" id="349901641">
+					<object class="IBUIButton" id="167596200">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{247, 11}, {61, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="353096831"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -134,6 +138,7 @@
 							<bytes key="NSRGB">MC40MTE3NjQ3NDA5IDAuODU4ODIzNTk3NCAwLjUwOTgwMzk1MDgAA</bytes>
 						</object>
 						<bool key="IBUIOpaque">NO</bool>
+						<float key="IBUIAlpha">0.80000001192092896</float>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
@@ -157,10 +162,11 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 548}}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="1036765993"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
-					<int key="NSColorSpace">1</int>
-					<bytes key="NSRGB">MC4xNTY4NjI3NDUxIDAuNzc2NDcwNTg4MiAwLjA5MDE5NjA3ODQzAA</bytes>
+					<int key="NSColorSpace">2</int>
+					<bytes key="NSRGB">MC40MTE3NjQ3NDA5IDAuODU4ODIzNTk3NCAwLjUwOTgwMzk1MDgAA</bytes>
 				</object>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 				<object class="IBUIScreenMetrics" key="IBUISimulatedDestinationMetrics">
@@ -204,7 +210,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">logoutButton:</string>
-						<reference key="source" ref="349901641"/>
+						<reference key="source" ref="167596200"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -223,8 +229,8 @@
 						<int key="objectID">1</int>
 						<reference key="object" ref="191373211"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="802134855">
-								<reference key="firstItem" ref="349901641"/>
+							<object class="IBNSLayoutConstraint" id="721168748">
+								<reference key="firstItem" ref="167596200"/>
 								<int key="firstAttribute">10</int>
 								<int key="relation">0</int>
 								<reference key="secondItem" ref="1036765993"/>
@@ -239,11 +245,11 @@
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">2</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="22573212">
+							<object class="IBNSLayoutConstraint" id="655156185">
 								<reference key="firstItem" ref="191373211"/>
 								<int key="firstAttribute">6</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="349901641"/>
+								<reference key="secondItem" ref="167596200"/>
 								<int key="secondAttribute">6</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
@@ -255,7 +261,7 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="205964671">
+							<object class="IBNSLayoutConstraint" id="976932743">
 								<reference key="firstItem" ref="780549580"/>
 								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
@@ -384,7 +390,7 @@
 								<int key="contentType">3</int>
 							</object>
 							<reference ref="1036765993"/>
-							<reference ref="349901641"/>
+							<reference ref="167596200"/>
 							<reference ref="780549580"/>
 							<reference ref="353096831"/>
 						</array>
@@ -428,7 +434,7 @@
 						<int key="objectID">18</int>
 						<reference key="object" ref="1036765993"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="581903730">
+							<object class="IBNSLayoutConstraint" id="30519472">
 								<reference key="firstItem" ref="1036765993"/>
 								<int key="firstAttribute">8</int>
 								<int key="relation">0</int>
@@ -506,15 +512,15 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">60</int>
-						<reference key="object" ref="581903730"/>
+						<reference key="object" ref="30519472"/>
 						<reference key="parent" ref="1036765993"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">61</int>
-						<reference key="object" ref="349901641"/>
+						<reference key="object" ref="167596200"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="964981388">
-								<reference key="firstItem" ref="349901641"/>
+							<object class="IBNSLayoutConstraint" id="790953076">
+								<reference key="firstItem" ref="167596200"/>
 								<int key="firstAttribute">8</int>
 								<int key="relation">0</int>
 								<nil key="secondItem"/>
@@ -524,13 +530,13 @@
 									<double key="value">21</double>
 								</object>
 								<float key="priority">1000</float>
-								<reference key="containingView" ref="349901641"/>
+								<reference key="containingView" ref="167596200"/>
 								<int key="scoringType">3</int>
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">1</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="1060498458">
-								<reference key="firstItem" ref="349901641"/>
+							<object class="IBNSLayoutConstraint" id="671370422">
+								<reference key="firstItem" ref="167596200"/>
 								<int key="firstAttribute">7</int>
 								<int key="relation">0</int>
 								<nil key="secondItem"/>
@@ -540,7 +546,7 @@
 									<double key="value">61</double>
 								</object>
 								<float key="priority">1000</float>
-								<reference key="containingView" ref="349901641"/>
+								<reference key="containingView" ref="167596200"/>
 								<int key="scoringType">3</int>
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">1</int>
@@ -550,22 +556,22 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">65</int>
-						<reference key="object" ref="1060498458"/>
-						<reference key="parent" ref="349901641"/>
+						<reference key="object" ref="671370422"/>
+						<reference key="parent" ref="167596200"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">76</int>
-						<reference key="object" ref="964981388"/>
-						<reference key="parent" ref="349901641"/>
+						<reference key="object" ref="790953076"/>
+						<reference key="parent" ref="167596200"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">82</int>
-						<reference key="object" ref="22573212"/>
+						<reference key="object" ref="655156185"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">84</int>
-						<reference key="object" ref="802134855"/>
+						<reference key="object" ref="721168748"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -580,7 +586,7 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">93</int>
-						<reference key="object" ref="205964671"/>
+						<reference key="object" ref="976932743"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
@@ -599,14 +605,14 @@
 					<reference ref="43270767"/>
 					<reference ref="801945658"/>
 					<reference ref="574722453"/>
-					<reference ref="205964671"/>
-					<reference ref="22573212"/>
-					<reference ref="802134855"/>
+					<reference ref="976932743"/>
+					<reference ref="655156185"/>
+					<reference ref="721168748"/>
 				</array>
 				<string key="18.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array key="18.IBViewMetadataConstraints">
 					<reference ref="618032877"/>
-					<reference ref="581903730"/>
+					<reference ref="30519472"/>
 				</array>
 				<boolean value="NO" key="18.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="20.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -627,8 +633,8 @@
 				<string key="60.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="61.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array class="NSMutableArray" key="61.IBViewMetadataConstraints">
-					<reference ref="1060498458"/>
-					<reference ref="964981388"/>
+					<reference ref="671370422"/>
+					<reference ref="790953076"/>
 				</array>
 				<boolean value="NO" key="61.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="65.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -645,7 +651,48 @@
 			<nil key="sourceID"/>
 			<int key="maxID">93</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">LSMeViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">logoutButton:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">logoutButton:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">logoutButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">userLabel</string>
+						<string key="NS.object.0">UILabel</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">userLabel</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">userLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/LSMeViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSLayoutConstraint</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
